// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SpinnerContainer when rendered with isSelected=false it should match snapshot 1`] = `
<div
  style={
    Object {
      "display": "block",
      "height": "100%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  This is should not be obscured
</div>
`;

exports[`components/SpinnerContainer when rendered with isSelected=true it should match snapshot 1`] = `
<div
  style={
    Object {
      "display": "block",
      "height": "100%",
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FEFEFE",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "opacity": 0.9,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": "5",
      }
    }
  >
    <SpinnerImage />
  </div>
  This should be obscured
</div>
`;
